Add Tesla disconnect endpoint
